# akonadi-facebook

./: BUGS  CMakeLists.txt  README  TODO
cmake/modules/: FindAkonadiSocialUtils.cmake
libkfacebook/: CMakeLists.txt  alleventslistjob.cpp  alleventslistjob.h  allmessageslistjob.cpp  allmessageslistjob.h  allnoteslistjob.cpp  allnoteslistjob.h  allpostslistjob.cpp  allpostslistjob.h  appinfo.cpp  appinfo.h  authenticationdialog.cpp  authenticationdialog.h  commentinfo.cpp  commentinfo.h  eventinfo.cpp  eventinfo.h  eventjob.cpp  eventjob.h  eventslistjob.cpp  eventslistjob.h  facebookjobs.cpp  facebookjobs.h  friendjob.cpp  friendjob.h  friendlistjob.cpp  friendlistjob.h  getcommentsjob.cpp  getcommentsjob.h  getlikesjob.cpp  getlikesjob.h  likeinfo.cpp  likeinfo.h  listjobbase.cpp  listjobbase.h  messageinfo.cpp  messageinfo.h  messagejob.cpp  messagejob.h  messageslistjob.cpp  (+37 more)
resource/: CMakeLists.txt  Messages.sh  facebookresource.cpp  facebookresource.desktop  facebookresource.h  facebookresource_events.cpp  facebookresource_friends.cpp  facebookresource_messages.cpp  facebookresource_notes.cpp  facebookresource_notifications.cpp  facebookresource_posts.cpp  settingsbase.kcfg  settingsdialog.cpp
serializer/: CMakeLists.txt  akonadi_serializer_socialnotification.cpp  akonadi_serializer_socialnotification.desktop  akonadi_serializer_socialnotification.h  akonadi_serializer_statusitem.cpp  akonadi_serializer_statusitem.desktop  akonadi_serializer_statusitem.h  x-vnd.akonadi.statusitem.xml
